export class Season {
    id: string;

    constructor(id: string) {
        this.id = id;
    }
}